<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:title="@string/category_title_app">

        <!-- アプリケーションパスワード -->
        <info.paveway.kidsalerm.dialog.PasswordDialogPreference
            android:key="appPassword"
            android:title="@string/app_password_title"
            android:summary="@string/app_password_summary"
            android:dialogTitle="@string/app_password_dialogtitle"
            android:inputType="textPassword" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/category_title_mail">

        <info.paveway.kidsalerm.dialog.EditDialogPreference
            android:key="mailUserName"
            android:title="@string/mail_user_name_title"
            android:summary="@string/mail_user_name_summary"
            android:dialogTitle="@string/mail_user_name_dialogtitle"
            android:hint="user name" />

        <info.paveway.kidsalerm.dialog.PasswordDialogPreference
            android:key="mailPassword"
            android:title="@string/mail_password_title"
            android:summary="@string/mail_password_summary"
            android:dialogTitle="@string/mail_password_dialogtitle"
            android:inputType="textPassword" />

        <PreferenceScreen
            android:key="mailFrom"
            android:title="送信元メールアドレス"
            android:summary="送信元のGmailアドレスを選択してください" >
        </PreferenceScreen>

        <PreferenceScreen
            android:key="mailTo"
            android:title="送信先メールアドレス"
            android:summary="送信先のアドレスを選択してください" >
        </PreferenceScreen>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/category_title_notice">

        <CheckBoxPreference
            android:key="noticePowerOn"
            android:title="@string/notice_power_on_title"
            android:summary="@string/notice_power_on_summary" />

        <CheckBoxPreference
            android:key="noticePowerOff"
            android:title="@string/notice_power_off_title"
            android:summary="@string/notice_power_off_summary" />

        <CheckBoxPreference
            android:key="noticeStay"
            android:title="@string/notice_stay_title"
            android:summary="@string/notice_stay_summary" />

        <EditTextPreference
            android:key="noticeStayTime"
            android:title="@string/notice_stay_time_title"
            android:summary="@string/notice_stay_time_summary"
            android:dialogTitle="@string/notice_stay_time_dialogtitle"
            android:dialogMessage="@string/notice_stay_time_summary"
            android:dependency="noticeStay"
            android:inputType="number"
            android:maxLength="4"
            android:text="120"
            android:hint="0～1440" />

        <PreferenceScreen
            android:key="exclusionPlace"
            android:title="@string/select_stay_exclusion_title"
            android:summary="@string/select_stay_exclusion_summary"
            android:dependency="noticeStay" >
        </PreferenceScreen>

    </PreferenceCategory>

</PreferenceScreen>


