<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

      <LinearLayout
          android:id="@+id/headerLayout1"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_alignParentTop="true"
          android:layout_marginBottom="8dp"
          android:layout_marginLeft="16dp"
          android:layout_marginRight="16dp"
          android:layout_marginTop="16dp"
          android:orientation="horizontal" >

          <TextView
              android:id="@+id/serviceStatusLabel"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_marginRight="8dp"
              android:layout_weight="1"
              android:text="@string/service_status_label" />

          <TextView
              android:id="@+id/serviceStatusValue"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_marginLeft="8dp"
              android:layout_weight="1"
              android:textSize="14sp" />

      </LinearLayout>

      <LinearLayout
          android:id="@+id/headerLayout2"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_below="@id/headerLayout1"
          android:layout_marginBottom="8dp"
          android:layout_marginLeft="16dp"
          android:layout_marginRight="16dp"
          android:layout_marginTop="8dp"
          android:orientation="horizontal" >

          <TextView
              android:id="@+id/networkStatusLabel"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_marginRight="8dp"
              android:layout_weight="1"
              android:text="@string/network_status_label" />

          <TextView
              android:id="@+id/networkStatusValue"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_marginLeft="8dp"
              android:layout_weight="1"
              android:textSize="14sp" />

      </LinearLayout>

      <LinearLayout
          android:id="@+id/headerLayout3"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_below="@id/headerLayout2"
          android:layout_marginBottom="8dp"
          android:layout_marginLeft="16dp"
          android:layout_marginRight="16dp"
          android:layout_marginTop="8dp"
          android:orientation="horizontal" >

          <TextView
              android:id="@+id/mailSettingLabel"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_marginRight="8dp"
              android:layout_weight="1"
              android:text="@string/mail_setting_label" />

          <TextView
              android:id="@+id/mailSettingValue"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_marginLeft="8dp"
              android:layout_weight="1"
              android:textSize="14sp" />

      </LinearLayout>

      <LinearLayout
          android:id="@+id/headerLayout4"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_below="@id/headerLayout3"
          android:layout_marginBottom="8dp"
          android:layout_marginLeft="16dp"
          android:layout_marginRight="16dp"
          android:layout_marginTop="8dp"
          android:orientation="horizontal" >

          <TextView
              android:id="@+id/mailSendStatusLabel"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_marginRight="8dp"
              android:layout_weight="1"
              android:text="@string/mail_send_status_label" />

          <TextView
              android:id="@+id/mailSendStatusValue"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_marginLeft="8dp"
              android:layout_weight="1"
              android:textSize="14sp" />

      </LinearLayout>

      <LinearLayout
          android:id="@+id/headerLayout5"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_below="@id/headerLayout4"
          android:orientation="vertical" >

          <Button
              android:id="@+id/startServiceButton"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="8dp"
              android:layout_marginBottom="8dp"
              android:layout_marginLeft="16dp"
              android:layout_marginRight="16dp"
              android:text="@string/start_service_button"
              android:textSize="14sp" />

          <Button
              android:id="@+id/stopServiceButton"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="8dp"
              android:layout_marginBottom="8dp"
              android:layout_marginLeft="16dp"
              android:layout_marginRight="16dp"
              android:text="@string/stop_service_button"
              android:textSize="14sp" />

          <Button
              android:id="@+id/confirmSendMailButton"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="8dp"
              android:layout_marginBottom="8dp"
              android:layout_marginLeft="16dp"
              android:layout_marginRight="16dp"
              android:text="@string/confirm_send_mail_button"
              android:textSize="14sp" />

          <Button
              android:id="@+id/settingsPreferenceButton"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="8dp"
              android:layout_marginBottom="8dp"
              android:layout_marginLeft="16dp"
              android:layout_marginRight="16dp"
              android:text="@string/settings_preference_button"
              android:textSize="14sp" />

      </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/footerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >

        <include layout="@layout/adview" />

    </LinearLayout>

</RelativeLayout>
